mac: Fix copying from the Omnibox.

This CL makes several small changes.
1. The Omnibox now clears the pasteboard before copying into it.
2. Clipboard utility classes now use the UTI compliant NSPasteboardTypeString
variable, which replaces NSStringPboardType.
3. A new browser test was written to prevent this regression from happening
again.

BUG=600207

Review URL: https://codereview.chromium.org/1857843002

Cr-Commit-Position: refs/heads/master@{#384981}

Former-commit-id: 49a52026c1fadd6c83b7eaae68512142ff076864